--- a/Van Gogh Evolucional/Van Gogh Evolucional.csproj
+++ b/Van Gogh Evolucional/Van Gogh Evolucional.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorVectorCalculator.cs" />
     <Compile Include="Histogram.cs" />
     <Compile Include="ImageHandler.cs" />
     <Compile Include="PopulationManhattanDistance.cs" />
