--- a/Van Gogh Evolucional/Van Gogh Evolucional.csproj
+++ b/Van Gogh Evolucional/Van Gogh Evolucional.csproj
@@ -46,10 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColorVectorCalculator.cs" />
-    <Compile Include="Histogram.cs" />
+    <Compile Include="DistanceCalculator.cs" />
+    <Compile Include="HistogramCalculator.cs" />
     <Compile Include="ImageHandler.cs" />
-    <Compile Include="PopulationManhattanDistance.cs" />
-    <Compile Include="HistogramColor.cs" />
     <Compile Include="ImageGenerator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
