--- a/Van Gogh Evolucional/Van Gogh Evolucional.csproj
+++ b/Van Gogh Evolucional/Van Gogh Evolucional.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VectorCalculator.cs" />
+    <Compile Include="ColorVectorCalculator.cs" />
     <Compile Include="DistanceCalculator.cs" />
     <Compile Include="HistogramCalculator.cs" />
     <Compile Include="ImageHandler.cs" />
